# serde-ext

./: Cargo.toml  README.md
examples/: simple.rs
serde-ext-macros/: Cargo.toml
serde-ext-macros/src/: lib.rs
src/: lib.rs
