[package]
name = "serde-ext"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "serde extensions"

[dependencies]
serde-ext-macros = { version = "0.1.0", path = "serde-ext-macros" }
serde = { version = "1", features = ["derive"] }
derive_more = "0.15.0"
base64 = { version = "0.10.1", optional = true }

[features]
default = ["base64"]

[dev-dependencies]
serde_json = "1.0.40"
url = "1.7.2"
